@@ -1,4 +1,5 @@
 0.06
+ - Add autofocus to Input object.
 
 0.05 2022-10-26T02:08:59+02:00
  - Add Select and Option objects.
